<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>whycon_ros</name>
  <version>0.1.3</version>
  <description>
    Implementats the WhyCon localisation system into ROS.
    MIT license is only for non-comertial use. Otherwise, please, contact us.
  </description>

  <maintainer email="jiri.ulrich@fel.cvut.cz">Jiri Ulrich</maintainer>
  <maintainer email="tomas.krajnik@fel.cvut.cz">Tom Krajnik</maintainer>

  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <url type="website">https://github.com/gestom/whycon-orig</url>

  <author email="tomas.krajnik@fel.cvut.cz">Tom Krajnik</author>
  <author email="jiri.ulrich@fel.cvut.cz">Jiri Ulrich</author>
  
  <build_depend>rclcpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>image_transport</build_depend>
  <!-- <build_depend>dynamic_reconfigure</build_depend> -->

  <build_depend>visualization_msgs</build_depend>
  <!-- <build_depend>cv_bridge</build_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
